# anydi-django

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
anydi_django/: _container.py  _utils.py  apps.py
anydi_django/ninja/: _operation.py  _signature.py
tests/: conftest.py  factories.py  settings.py  test_apps.py  urls.py  views.py
tests/api/: router.py
